--- a/DataSource.Abstractions/DataSource.Abstractions.csproj
+++ b/DataSource.Abstractions/DataSource.Abstractions.csproj
@@ -6,4 +6,8 @@
         <RootNamespace>ScheduleSystem.DataSource.Abstractions</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Domain.Entities\Domain.Entities.csproj" />
+    </ItemGroup>
+
 </Project>
