--- a/DataApi/DataApi.csproj
+++ b/DataApi/DataApi.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DataSource.Implementation\DataSource.Implementation.csproj" />
     <ProjectReference Include="..\Domain.BusinessLayer\Domain.BusinessLayer.csproj" />
     <ProjectReference Include="..\Domain.Entities\Domain.Entities.csproj" />
   </ItemGroup>
