--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -2,8 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
-        <AssemblyName>ScheduleSystem.Domain.BusinessLayer</AssemblyName>
-        <RootNamespace>ScheduleSystem.Domain.BusinessLayer</RootNamespace>
+        <AssemblyName>ScheduleSytem.Shared</AssemblyName>
+        <RootNamespace>ScheduleSytem.Shared</RootNamespace>
     </PropertyGroup>
 
 </Project>
