Added sign in methods into services, controllers etc

--- a/Domain.BusinessLogic.Abstractions/Domain.BusinessLogic.Abstractions.csproj
+++ b/Domain.BusinessLogic.Abstractions/Domain.BusinessLogic.Abstractions.csproj
@@ -6,4 +6,8 @@
         <RootNamespace>ScheduleSystem.Domain.BusinessLogic.Abstractions</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Domain.Entities\Domain.Entities.csproj" />
+    </ItemGroup>
+
 </Project>
