--- a/DataApi/appSettings.json
+++ b/DataApi/appSettings.json
@@ -1,5 +1,10 @@
 {
     "ConnectionStrings": {
         "Default": "Host=127.0.0.1; Port=5432; User ID=schedule_system; Database=schedule_system_db; Password=topkek123"
+    },
+    "Logging": {
+        "File": {
+            "Path": "logs/development.log"
+        }
     }
 }
