--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>netcoreapp2.2</TargetFramework>
         <AssemblyName>ScheduleSytem.Shared</AssemblyName>
         <RootNamespace>ScheduleSytem.Shared</RootNamespace>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
